--- a/Solutions/Paladin Extensions/PX CSGO/PX CSGO.vcxproj.filters
+++ b/Solutions/Paladin Extensions/PX CSGO/PX CSGO.vcxproj.filters
@@ -42,9 +42,6 @@
     <ClCompile Include="SDK\Tools.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="SDK\Valve\Types\CHandle.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Features\Awareness\Glow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -61,6 +58,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Features\Features.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\PX Precompiled.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -222,6 +222,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SDK\Valve\Interfaces\IInputSystem.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\PX Precompiled.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
