--- a/Solutions/Paladin Extensions/PX Unit Tests/PX Unit Tests.vcxproj.filters
+++ b/Solutions/Paladin Extensions/PX Unit Tests/PX Unit Tests.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="PX Unit Tests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\PX Precompiled.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\PX Precompiled.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
