--- a/Solutions/Paladin Extensions/PX Launcher/PX Launcher.vcxproj.filters
+++ b/Solutions/Paladin Extensions/PX Launcher/PX Launcher.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClInclude Include="resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\PX Precompiled.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PX Launcher.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\PX Precompiled.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
