Update Solution (REVERT ME IF NEEDED)
WARNINGS:
! Connectivity throws an exception in unit tests. Could be the server just returning nothing for no reason, per usual.
! LoadLibraryEx unit test fails, didn't bother to investigate yet.

New PX Installer project
 - Resources moved. Started implementation

New literal operator (bytes, yippy!)
 * Use it with `_b` like "\x24"_b

New string types
- string_cast support coming soon (string casting with byte_t -> crash; others just dont work yet)

Moved Popup function to be in the framework

--- a/Solutions/Paladin Extensions/PX Framework/PX Framework.vcxproj.filters
+++ b/Solutions/Paladin Extensions/PX Framework/PX Framework.vcxproj.filters
@@ -113,5 +113,8 @@
     <None Include="Design\User Interface.inl">
       <Filter>Header Files</Filter>
     </None>
+    <None Include="Application\Types.inl">
+      <Filter>Header Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
